[gd_scene load_steps=36 format=3 uid="uid://bs6sk2wpyl2h0"]

[ext_resource type="Script" path="res://opening_scene/openingcutscene.gd" id="1_drshc"]
[ext_resource type="Texture2D" uid="uid://srieon7py2xq" path="res://opening_scene/steadyground.png" id="1_icemc"]
[ext_resource type="Texture2D" uid="uid://pd684yj3h4cv" path="res://opening_scene/townchunk.png" id="2_20ayn"]
[ext_resource type="Texture2D" uid="uid://vemmag0lnyxk" path="res://opening_scene/evildude.png" id="3_e4hus"]
[ext_resource type="Texture2D" uid="uid://bwdi64ch66thb" path="res://opening_scene/IntroPart1SpriteSheet.png" id="5_vvbv5"]
[ext_resource type="Texture2D" uid="uid://b372tsqu4yrvf" path="res://opening_scene/IntroPart2SpriteSheet.png" id="6_qcl4s"]
[ext_resource type="Texture2D" uid="uid://dn2dw8fbeqx4e" path="res://opening_scene/IntroPart3SpriteSheet.png" id="7_ts30g"]
[ext_resource type="Texture2D" uid="uid://rrs5l0gla4q7" path="res://opening_scene/IntroPart4SpriteSheet.png" id="8_tmrux"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3hucn"]
atlas = ExtResource("5_vvbv5")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3li6h"]
atlas = ExtResource("5_vvbv5")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3sn8"]
atlas = ExtResource("5_vvbv5")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnta6"]
atlas = ExtResource("5_vvbv5")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgnr0"]
atlas = ExtResource("6_qcl4s")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oow1c"]
atlas = ExtResource("6_qcl4s")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymfwr"]
atlas = ExtResource("6_qcl4s")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_48d5g"]
atlas = ExtResource("6_qcl4s")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1td4"]
atlas = ExtResource("6_qcl4s")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uis3"]
atlas = ExtResource("6_qcl4s")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_82d1h"]
atlas = ExtResource("6_qcl4s")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_knq5i"]
atlas = ExtResource("7_ts30g")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2vh5"]
atlas = ExtResource("7_ts30g")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsfmi"]
atlas = ExtResource("7_ts30g")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x22x0"]
atlas = ExtResource("7_ts30g")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1tkf"]
atlas = ExtResource("7_ts30g")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd126"]
atlas = ExtResource("7_ts30g")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufb7b"]
atlas = ExtResource("8_tmrux")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_75mxd"]
atlas = ExtResource("8_tmrux")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm6xg"]
atlas = ExtResource("8_tmrux")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pl66"]
atlas = ExtResource("8_tmrux")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_abppk"]
atlas = ExtResource("8_tmrux")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5drn"]
atlas = ExtResource("8_tmrux")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwvb2"]
atlas = ExtResource("8_tmrux")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iakn4"]
atlas = ExtResource("8_tmrux")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_en72b"]
atlas = ExtResource("8_tmrux")
region = Rect2(800, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_wijcd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hucn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3sn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnta6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hucn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3sn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnta6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgnr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oow1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymfwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48d5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1td4")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_2uis3")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_82d1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knq5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2vh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsfmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x22x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1tkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufb7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75mxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm6xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pl66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abppk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5drn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwvb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iakn4")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_en72b")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Openingcutscene" type="Node2D"]
script = ExtResource("1_drshc")

[node name="MainCamera" type="Camera2D" parent="."]
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="Background1" type="Node2D" parent="."]

[node name="SteadyGround" type="Sprite2D" parent="Background1"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_icemc")

[node name="TownChunk" type="Sprite2D" parent="Background1"]
position = Vector2(-230, -80.45)
scale = Vector2(0.611688, 0.60621)
texture = ExtResource("2_20ayn")

[node name="EvilDude" type="Sprite2D" parent="."]
position = Vector2(-598, -16)
scale = Vector2(0.855, 1)
texture = ExtResource("3_e4hus")

[node name="StageTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.5
autostart = true

[node name="HayzeGifs" type="CanvasLayer" parent="."]

[node name="Container" type="Container" parent="HayzeGifs"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="HayzeGifs/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Animation1" type="AnimatedSprite2D" parent="HayzeGifs/Container"]
position = Vector2(600, 324)
scale = Vector2(6.5, 6.5)
sprite_frames = SubResource("SpriteFrames_wijcd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SkipButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "skip"

[connection signal="timeout" from="StageTimer" to="." method="_on_stage_timer_timeout"]
[connection signal="animation_looped" from="HayzeGifs/Container/Animation1" to="." method="_on_hayzeGifs_done"]
[connection signal="pressed" from="CanvasLayer/SkipButton" to="." method="_on_skip_button_pressed"]
